--- a/.github/workflows/build-angle.yml
+++ b/.github/workflows/build-angle.yml
@@ -1,4 +1,3 @@
-
 name: build-angle
 
 on:
@@ -9,37 +8,78 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: windows-2019
+  build-win:
+    name: Build (Windows)
+    strategy:
+      matrix:
+        os: [windows-2019] # could also add windows-2022
+    runs-on: ${{ matrix.os }}
+    env:
+      BUILD_OS: ${{ matrix.os }}
+    outputs:
+      ANGLE_COMMIT: ${{ steps.build.outputs.ANGLE_COMMIT }}
+      BUILD_DATE: ${{ steps.build.outputs.BUILD_DATE }}
     steps:
-
       - name: checkout
-        uses: actions/checkout@v2          
+        uses: actions/checkout@v2
 
       - name: build
         id: build
         shell: cmd
         run: call build.cmd
 
-      - name: release
-        id: release
-        if: steps.build.outputs.ANGLE_COMMIT != ''
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          tag_name: ${{ steps.build.outputs.BUILD_DATE }}
-          release_name: ${{ steps.build.outputs.BUILD_DATE }}
-          body: |
-            [angle commit](https://github.com/google/angle/commit/${{ steps.build.outputs.ANGLE_COMMIT }})
+          name: "angle-${{ matrix.os }}-${{ steps.build.outputs.BUILD_DATE }}.zip"
+          path: "angle-${{ matrix.os }}-${{ steps.build.outputs.BUILD_DATE }}.zip"
 
-      - name: upload
-        id: upload
-        uses: actions/upload-release-asset@v1
+  build-mac:
+    name: Build (Mac)
+    strategy:
+      matrix:
+        os: [macos-11, macos-12, macos-13]
+    runs-on: ${{ matrix.os }}
+    env:
+      BUILD_OS: ${{ matrix.os }}
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: build
+        id: build
+        run: ./build.sh
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: "angle-${{ matrix.os }}-${{ steps.build.outputs.BUILD_DATE }}.zip"
+          path: "angle-${{ matrix.os }}-${{ steps.build.outputs.BUILD_DATE }}.zip"
+
+  release:
+    runs-on: ubuntu-latest
+    needs:
+      - build-win
+      - build-mac
+    steps:
+      - name: download windows artifacts
+        uses: dawidd6/action-download-artifact@v2.27.0
+        with:
+          workflow: build-win
+
+      - name: download mac artifacts
+        uses: dawidd6/action-download-artifact@v2.27.0
+        with:
+          workflow: build-mac
+
+      - name: create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: "angle-${{ steps.build.outputs.BUILD_DATE }}.zip"
-          asset_name: "angle-${{ steps.build.outputs.BUILD_DATE }}.zip"
-          asset_content_type: application/zip
+        run: |
+          set -x
+          assets=()
+          for asset in ./angle-*.zip; do
+            assets+=("-a" "$asset")
+          done
+          tag_name="${{ needs.build-win.outputs.BUILD_DATE }}"
+          hub release create "${assets[@]}" -m "$tag_name" -m "Angle commit: [${{ needs.build-win.outputs.ANGLE_COMMIT }}](https://github.com/google/angle/commit/${{ needs.build-win.outputs.ANGLE_COMMIT }})" "$tag_name"
