See what the Github official thing does

--- a/.github/workflows/build-angle.yml
+++ b/.github/workflows/build-angle.yml
@@ -64,6 +64,15 @@ jobs:
       - build-win
       - build-mac
     steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.1.1
+        with:
+          path: path/to/artifacts
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: path/to/artifacts
+
       - name: Download Windows artifacts
         uses: marcofaggian/action-download-multiple-artifacts@v4.0.1
         with:
