--- a/.github/workflows/build-angle.yml
+++ b/.github/workflows/build-angle.yml
@@ -64,6 +64,9 @@ jobs:
       - build-win
       - build-mac
     steps:
+      - name: Check out
+        uses: actions/checkout@v2
+
       - name: Download artifacts
         uses: actions/download-artifact@v2.1.1
 
