--- a/.github/workflows/build-angle.yml
+++ b/.github/workflows/build-angle.yml
@@ -76,8 +76,10 @@ jobs:
         run: |
           set -x
           assets=()
-          for asset in ./angle-*.zip; do
-            assets+=("-a" "$asset")
+          for asset_dir in ./angle-*.zip; do
+            for asset in $asset_dir/*; do
+              assets+=("-a" "$asset")
+            done
           done
           tag_name="${{ needs.build-win.outputs.BUILD_DATE }}"
           hub release create "${assets[@]}" -m "$tag_name" -m "Angle commit: [${{ needs.build-win.outputs.ANGLE_COMMIT }}](https://github.com/google/angle/commit/${{ needs.build-win.outputs.ANGLE_COMMIT }})" "$tag_name"
